# Johannes_minimal

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main_optional.cpp
